--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>mssc-brewery-bom</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+<!--    *** Mega Important - you must run Maven Install on this BOM.xml on local computer
+        so that the other microservices can access it *** -->
+
     <packaging>pom</packaging>
 
     <properties>
